[package]
name = "wrapped-list"
version = "1.0.0"
edition = "2021"
description = "Macro for wrapping elements of a list with an object, function, or another macro at compile time"
readme = "README.md"
repository = "https://github.com/hunterlawson/wrapped-list"
license = "MIT OR Apache-2.0"
keywords = ["wrap", "list", "macro", "object", "function"]

[dev-dependencies]
duplicate = "1.0.0"
